Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -975,7 +975,7 @@
     "month-4": "Abril",
     "month-5": "Mai",
     "month-6": "Juni",
-    "month-7": "Julio",
+    "month-7": "Juli",
     "month-8": "Agosto",
     "month-9": "Septiembre",
     "month-name": "Month Name",
@@ -1285,7 +1285,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Passwort wiederholen",
-    "repeat-password": "Repetir contraseña",
+    "repeat-password": "Passwort wiederholen",
     "reply": "Respuesta",
     "report": "Bericht",
     "report-grouping-account": "Nach Konto gruppieren",
@@ -1394,13 +1394,13 @@
     "small": "Klein",
     "smaller-than": "Kleiner als",
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
-    "social-security-number": "Social Security number",
+    "social-security-number": "Sozialversicherungsnummer",
     "sort": "Order",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
     "source": "Quelle",
@@ -1427,7 +1427,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Lager max.",
     "stockmin": "Lager min.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Speicherlimit fast erreicht (%limit%). Es sind noch %free% übrig",
     "storage-limit-reached": "Speicherlimit erreicht",
     "stripe": "Streifen",
     "structured-data-csv": "CSV-Datei",
@@ -1502,7 +1502,7 @@
     "tax-transport": "Steuerverkehr",
     "taxes": "Steuern",
     "telemetry-data-to-send": "telemetry-data-to-send",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Telefonvorwahl",
     "template": "Vorlage",
     "template-error": "template-error",
     "template-not-found": "Vorlage nicht gefunden",
