--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -227,7 +227,7 @@
     "checked": "controllato",
     "children": "Bambini",
     "children-accounts": "Children Accounts",
-    "choose-currency": "Choose currency",
+    "choose-currency": "Scegli la valuta",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Scegli dipendente",
     "choose-files": "Scegli i file",
@@ -354,7 +354,7 @@
     "customer-estimations": "Stime del cliente",
     "customer-group": "Gruppo di clienti",
     "customer-groups": "Gruppi di clienti",
-    "customer-invoice": "Customer invoice",
+    "customer-invoice": "Fattura cliente",
     "customer-invoice-deleted-successfully": "Fattura di vendita 0 cancellata con successo.",
     "customer-invoices": "Customer invoices",
     "customer-not-found": "Cliente non trovato",
@@ -585,7 +585,7 @@
     "exercises": "esercizi",
     "exit": "uscita",
     "expedient": "pratica",
-    "expense-subaccount": "expense-subaccount",
+    "expense-subaccount": "Sottoconto per spese bancarie",
     "expenses": "expenses",
     "expiration": "Scadenza",
     "expiration-type": "expiration-type",
@@ -741,7 +741,7 @@
     "id": "Id.",
     "idaccount": "Id. account",
     "idem-wildcard-info": "Copia il valore della riga precedente",
-    "image": "Imagen",
+    "image": "Immagine",
     "images": "Immagini",
     "images-added-correctly": "%count% immagini aggiunte correttamente",
     "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
@@ -760,7 +760,7 @@
     "info": "Informazioni",
     "infostate-component-title": "Status Information",
     "initial-number": "numero iniziale",
-    "insert-update": "Añadir o modificar",
+    "insert-update": "Inserisci o aggiorna",
     "installed": "installed",
     "installed-plugins": "installed-plugins",
     "installer": "Programma di installazione FacturaScripts 2018 (Alpha)",
@@ -1173,7 +1173,7 @@
     "precio": "Prezzo",
     "predefined-concepts": "Predefined Concepts",
     "preferences": "Preferencias",
-    "preview": "preview",
+    "preview": "Anteprima",
     "previous": "precedente",
     "previous-balance": "Previous Balance",
     "previous-documents": "Documenti precedenti",
@@ -1189,7 +1189,7 @@
     "print-export-options": "Stampa ed esporta opzioni",
     "print-list-of-records": "Stampa l'elenco dei record",
     "print-price": "Stampa prezzi",
-    "print-quantity": "Imprimir cantidad",
+    "print-quantity": "Stampare quantità",
     "printed": "Stampato",
     "printing-format": "printing-format",
     "printing-formats": "Formati di stampa",
@@ -1262,7 +1262,7 @@
     "refunds": "refunds",
     "register": "registrare",
     "register-installation": "Registra installazione",
-    "register-installation-p": "register-installation-p",
+    "register-installation-p": "Registra la tua installazione per poter aggiornare i plugin di pagamento o privati.",
     "register-symbol": "#",
     "registered-installation": "Installazione registrata #%number%",
     "registered-installation-p": "Questa installazione è già stata registrata. Se hai plugin a pagamento, premi il pulsante di gestione per collegarli e poterli aggiornare.",
@@ -1311,7 +1311,7 @@
     "role": "Ruolo",
     "roles": "ruoli",
     "rules": "Regole",
-    "run": "run",
+    "run": "eseguire",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "I saldi",
     "sales-invoice": "Fattura di vendita",
@@ -1339,11 +1339,11 @@
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Enviar audios",
-    "send-documents": "Enviar documentos",
+    "send-documents": "Inviare documenti",
     "send-images": "Enviar imágenes",
     "send-invoices": "Invia fatture",
     "send-location": "Enviar ubicación",
-    "send-mail": "Send mail",
+    "send-mail": "Inviare mail",
     "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Enviar vídeos",
@@ -1463,7 +1463,7 @@
     "supplier-delivery-note": "Supplier delivery note",
     "supplier-delivery-notes": "Supplier delivery notes",
     "supplier-estimation": "Stima fornitore",
-    "supplier-estimations": "Supplier estimations",
+    "supplier-estimations": "Stime dei fornitori",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
     "supplier-invoice": "Fattura del Fornitore",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
@@ -1494,7 +1494,7 @@
     "tasks-component-title": "Compiti",
     "tasks-personal-title": "Compiti personali",
     "tax": "Imposta",
-    "tax-area": "tax-area",
+    "tax-area": "Area fiscale",
     "tax-areas": "aree fiscali",
     "tax-base": "Base Imponibile",
     "tax-credit-account": "Conto di credito per tasse",
@@ -1529,7 +1529,7 @@
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
     "title-font-size": "Dimensione del carattere del titolo",
-    "title-url": "Title URL",
+    "title-url": "Titolo URL",
     "to": "A",
     "to-refund": "Da rimborsare",
     "to-report": "Segnala",
