--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -132,7 +132,7 @@
     "auto": "Auto",
     "auto-apply-to": "Automaticamente aplicar a",
     "automatic": "Automático",
-    "available": "acessível",
+    "available": "disponível",
     "average": "Média",
     "average-cost": "Custo médio",
     "average-purchase-price": "Precio medio de compra",
@@ -144,7 +144,7 @@
     "balance-account": "Saldo em conta",
     "balance-account-abreviated": "Conta de saldo abreviada",
     "balance-amounts": "Balanço de Saldos e Saldos",
-    "balance-sheet": "Balance Sheet",
+    "balance-sheet": "Balanço Patrimonial",
     "balance-sheets": "Balance Sheets",
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
@@ -336,7 +336,7 @@
     "creation-date": "Data de criação",
     "credit": "Crédito",
     "crm": "CRM",
-    "cron-job": "cron-job",
+    "cron-job": "Tarefa programada",
     "cron-timeout": "O cron parou para não exceder o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar esse limite.",
     "crons": "Crons",
     "currency": "Moeda",
@@ -467,7 +467,7 @@
     "do-nothing": "Não fazer nada",
     "doc-type": "Document type",
     "document": "Documento",
-    "document-configuration": "document-configuration",
+    "document-configuration": "Configuração de documentos",
     "document-report": "Relatório de documentos",
     "document-sequence": "sequencia-documento",
     "document-sequences": "Sequências de documentos",
@@ -620,7 +620,7 @@
     "filter-method": "Método de filtragem",
     "filter-records-containing-indicated-value": "Filtrar registros contendo o valor indicado",
     "filters": "Filtros",
-    "finalize": "finalize",
+    "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
     "finished-cron": "Cron do FacturaScripts concluído, tempo decorrido: %timeNeeded%",
@@ -654,7 +654,7 @@
     "friday": "sexta-feira",
     "from": "Desde",
     "from-accounting-entry": "from-accounting-entry",
-    "from-date": "from-date",
+    "from-date": "Desde",
     "from-subaccount": "de subconta",
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
@@ -705,7 +705,7 @@
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
-    "group-more-docs-p": "group-more-docs-p",
+    "group-more-docs-p": "Agrupar com mais documentos deste cliente\/fornecedor",
     "group-name": "Nome do Grupo",
     "group-or-split": "Agrupar ou dividir",
     "group-or-split-p": "grupo-ou-divisão-p",
@@ -767,7 +767,7 @@
     "installer-p": "Bem-vindo ao instalador do FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "Os seguintes requisitos do instalador são necessários no FacturaScripts:",
     "integrity-check": "Integrity check",
-    "integrity-check-help": "This is a check of system integrity, described as",
+    "integrity-check-help": "Esta é uma verificação da integridade do sistema, descrita como",
     "interest": "Interés",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
@@ -901,7 +901,7 @@
     "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuário não encontrado",
-    "logo": "logo",
+    "logo": "logotipo",
     "logout": "Sair",
     "logout-ok": "Sair com sucesso.",
     "logs": "Logs",
@@ -911,7 +911,7 @@
     "look-for-gaps": "Buscar lacunas",
     "lot": "Muito",
     "low-security": "Baixa Segurança",
-    "machine": "machine",
+    "machine": "máquina",
     "machines": "máquinas",
     "macro-account-note-info": "Chaves para macro de substituição de valores",
     "mail-server-error": "Error al conectar al servidor de correio",
@@ -1127,10 +1127,10 @@
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
-    "percentage-commission": "% Commission",
+    "percentage-commission": "% Comissão",
     "percentage-discount": "p",
     "percentage-surcharge": "% Surcharge",
-    "percentage-vat": "% VAT",
+    "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
     "phase": "Fase",
@@ -1179,7 +1179,7 @@
     "previous-documents": "Documentos anteriores",
     "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
     "price-with-tax": "preço-com-imposto",
     "principal": "a Principal",
@@ -1243,7 +1243,7 @@
     "receipts": "Recibos",
     "record-deleted-correctly": "Registro excluído corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
-    "record-not-found": "record-not-found",
+    "record-not-found": "Registro não encontrado",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
     "recreate-system-integrity": "Recriar integridade do sistema",
@@ -1309,7 +1309,7 @@
     "risky-customer": "Cliente de Risco",
     "rol": "Rol",
     "role": "Role",
-    "roles": "Roles",
+    "roles": "Funções",
     "rules": "Rules",
     "run": "executar",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
@@ -1352,7 +1352,7 @@
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-message-by": "Enviado por %nick% em %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
     "sequences": "Sequências",
@@ -1524,7 +1524,7 @@
     "thousands-separator": "Milhares",
     "thursday": "quinta-feira",
     "ticket": "Bilhete",
-    "tickets": "Tickets",
+    "tickets": "Bilhetes",
     "time": "Hora",
     "timezone": "Selecione fuso horário",
     "title": "Título",
@@ -1548,7 +1548,7 @@
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "transferir",
-    "transfers": "transfers",
+    "transfers": "Transferências",
     "transfers-stock": "Transfers stock",
     "translation": "Tradução",
     "translations": "Traduções",
