--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -288,7 +288,7 @@
     "component": "Component",
     "concept": "Concept",
     "conditions": "conditions",
-    "configure-columns": "Column Configurator",
+    "configure-columns": "Configurar colunas",
     "confirm": "confirme",
     "confirm-delete": "Confirmar apagar?",
     "connect": "Conectar",
@@ -328,7 +328,7 @@
     "create": "Criar",
     "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Crear albarán",
-    "create-estimation": "Crear presupuesto",
+    "create-estimation": "Criar estimativa",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Criado",
@@ -336,7 +336,7 @@
     "creation-date": "Data de criação",
     "credit": "Crédito",
     "crm": "CRM",
-    "cron-job": "cron-job",
+    "cron-job": "Tarefa programada",
     "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "Moeda",
@@ -467,7 +467,7 @@
     "do-nothing": "Do nothing",
     "doc-type": "Document type",
     "document": "Documento",
-    "document-configuration": "document-configuration",
+    "document-configuration": "Configuração de documentos",
     "document-report": "Relatório de documentos",
     "document-sequence": "document-sequence",
     "document-sequences": "document-sequences",
@@ -557,7 +557,7 @@
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Régimen especial da agricultura, pecuária e pesca",
-    "es-tax-regime-exempt": "Exento",
+    "es-tax-regime-exempt": "Isento",
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
@@ -705,7 +705,7 @@
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
-    "group-more-docs-p": "group-more-docs-p",
+    "group-more-docs-p": "Agrupar com mais documentos deste cliente\/fornecedor",
     "group-name": "Nome do Grupo",
     "group-or-split": "Agrupar ou dividir",
     "group-or-split-p": "group-or-split-p",
@@ -808,7 +808,7 @@
     "issued": "Issued",
     "item-limit": "Itens por página",
     "items-added-correctly": "items-added-correctly",
-    "items-removed-correctly": "items-removed-correctly",
+    "items-removed-correctly": "%num% elementos removidos corretamente",
     "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
     "ivasop-account-not-found": "ivasop-account-not-found",
     "january": "Enero",
@@ -1089,7 +1089,7 @@
     "page-configuration": "Página de Configuração",
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
-    "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
+    "page-option-info": "Estas são as opções de formatação e permissões deste formulário ou lista. Podes modificar a ordem dos campos, ocultá-los, torná-los apenas de leitura ou aumentar o nível de privilégios. As alterações serão aplicadas ao utilizador selecionado.",
     "page-total-amount": "page-total-amount",
     "pagename": "Nome da página",
     "pages": "Páginas",
@@ -1127,10 +1127,10 @@
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
-    "percentage-commission": "% Commission",
+    "percentage-commission": "% Comissão",
     "percentage-discount": "p",
     "percentage-surcharge": "% Surcharge",
-    "percentage-vat": "% VAT",
+    "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
     "phase": "Fase",
@@ -1179,7 +1179,7 @@
     "previous-documents": "previous-documents",
     "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
     "price-with-tax": "price-with-tax",
     "principal": "a Principal",
@@ -1188,7 +1188,7 @@
     "print-data-records": "Imprimir todos os registros",
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
-    "print-price": "Imprimir precios",
+    "print-price": "Imprimir preço",
     "print-quantity": "Imprimir cantidad",
     "printed": "Printed",
     "printing-format": "Formato de impressão",
@@ -1243,7 +1243,7 @@
     "receipts": "receipts",
     "record-deleted-correctly": "Registro eliminado corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
-    "record-not-found": "record-not-found",
+    "record-not-found": "Registro não encontrado",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
     "recreate-system-integrity": "Recriar integridade do sistema",
@@ -1352,7 +1352,7 @@
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Envió un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-message-by": "Enviado por %nick% em %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
     "sequences": "sequences",
@@ -1452,7 +1452,7 @@
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
     "summary": "Resumo",
-    "sums-and-balances": "Sumas y saldos",
+    "sums-and-balances": "Somas e saldos",
     "sunday": "domingo",
     "supplied": "Suprido",
     "supplied-amount": "quantidade-fornecida",
@@ -1524,7 +1524,7 @@
     "thousands-separator": "Milhares",
     "thursday": "quinta-feira",
     "ticket": "Bilhete",
-    "tickets": "Tickets",
+    "tickets": "Bilhetes",
     "time": "Hora",
     "timezone": "Selecione fuso horário",
     "title": "Título",
@@ -1548,7 +1548,7 @@
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "transfer",
-    "transfers": "transfers",
+    "transfers": "Transferências",
     "transfers-stock": "Transfers stock",
     "translation": "Tradução",
     "translations": "Traduções",
@@ -1571,7 +1571,7 @@
     "under-minimums": "under-minimums",
     "undo": "Desfazer",
     "unit-profit": "unit-profit",
-    "unit-purchase-price": "unit-purchase-price",
+    "unit-purchase-price": "Preço de compra unitário",
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
@@ -1615,7 +1615,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-not-vies": "O número '%vat-number%' não está registado no sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
     "vat-regularization": "Regularização de IVA",
