--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -712,7 +712,7 @@
     "grouping-type": "Group",
     "groups": "Groups",
     "has-attachments": "Has attachments",
-    "has-parent": "Has parent",
+    "has-parent": "Has Parent",
     "hash": "Hash",
     "header": "Header",
     "heading-account-group-id": "Heading account ID group",
@@ -887,7 +887,7 @@
     "location": "Location",
     "lock-accounting": "Lock accounting",
     "lock-entry": "Lock entry",
-    "lock-invoice": "Lock invoice",
+    "lock-invoice": "Lock Invoice",
     "lock-unlock": "Lock-Unlock",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Locked",
@@ -1031,7 +1031,7 @@
     "not-allowed-modify": "You do not have permission to modify",
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
-    "not-public": "Not public",
+    "not-public": "Not Public",
     "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "The %type% %number% is not valid",
